<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:background="#fff" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:textColor="#333" android:gravity="center" android:id="@+id/fp_tv_title" android:padding="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/title"/>
    <TextView android:textAppearance="?android:attr/textAppearanceSmall" android:textColor="#333" android:gravity="left" android:id="@+id/fp_tv_location" android:padding="5dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="5dp" android:text="Current Location" android:layout_marginStart="5dp"/>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@+id/fp_buttonsLayout" android:padding="5sp" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textColor="#333" android:gravity="center" android:background="@drawable/fp_outline_black_1dp" android:padding="5dp" android:focusable="true" android:clickable="true" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginRight="5dp" android:text="@string/up" android:drawableTop="@drawable/fp_ic_action_up" android:layout_weight="1" android:onClick="goBack" android:layout_marginEnd="5dp"/>
        <TextView android:textColor="#333" android:gravity="center" android:id="@+id/fp_btn_new" android:background="@drawable/fp_outline_black_1dp" android:padding="5dp" android:focusable="true" android:clickable="true" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginRight="5dp" android:text="@string/neww" android:drawableTop="@drawable/fp_ic_action_add" android:layout_weight="1" android:onClick="newFolderDialog" android:layout_marginEnd="5dp"/>
        <TextView android:textColor="#333" android:gravity="center" android:id="@+id/fp_btn_select" android:background="@drawable/fp_outline_black_1dp" android:padding="5dp" android:focusable="true" android:clickable="true" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginRight="5dp" android:text="@string/select" android:drawableTop="@drawable/fp_ic_action_back" android:layout_weight="1" android:onClick="select" android:layout_marginEnd="5dp"/>
        <TextView android:textColor="#333" android:gravity="center" android:background="@drawable/fp_outline_black_1dp" android:padding="5dp" android:focusable="true" android:clickable="true" android:layout_width="0dp" android:layout_height="wrap_content" android:text="@string/cancel" android:drawableTop="@drawable/fp_ic_action_cancel" android:layout_weight="1" android:onClick="cancel"/>
    </LinearLayout>
    <ListView android:id="@+id/fp_listView" android:layout_width="match_parent" android:layout_height="wrap_content"/>
</LinearLayout>
